tests/js/invalid/record/malformed-assignment-1.buri
Hello = {name: Str}
a = {Hello|name:"world"}